--- a/README.org
+++ b/README.org
@@ -6,3 +6,5 @@ roll's total.  If a player rolls a sum that cannot be constructed from any
 available pegs, the game is over and the player's score is the sum of the
 remaining pegs.  The lowest score wins.  If the player can put down all the
 pegs, the player has *Shut The Box!*
+
+[[~/Desktop/shut-the-box.jpeg]]
