--- a/README.org
+++ b/README.org
@@ -7,4 +7,4 @@ available pegs, the game is over and the player's score is the sum of the
 remaining pegs.  The lowest score wins.  If the player can put down all the
 pegs, the player has *Shut The Box!*
 
-[[~/Desktop/shut-the-box.jpeg]]
+[[file:shut-the-box.jpeg][Shut The Box Game Screen]]
